<resources>
    <string name="app_name">Tribune</string>
    <string name="username">Имя пользователя</string>
    <string name="password">Пароль</string>
    <string name="password_confirmation">Подтверждение пароля</string>
    <string name="register">Зарегистрироваться</string>
    <string name="already_have_account">Уже есть аккаунт?</string>
    <string name="title_registration">Регистрация</string>
    <string name="title_reaction_list">Список реакций</string>
    <string name="title_profile">Профиль</string>
    <string name="title_crate_post">Создание идеи</string>
    <string name="title_feed">Идеи</string>
    <string name="title_auth">Авторизация</string>
    <string name="dont_have_account">Ещё не зарегистрированы?</string>
    <string name="login">Войти</string>
    <string name="menu_exit">Выход</string>
    <string name="menu_profile">Профиль</string>
    <string name="author_avatar">Аватарка автора</string>
    <string name="post_image">Изображение идеи</string>
    <string name="post_link">Ссылка в идее</string>
    <string name="see_ideas_of_this_author">Просмотреть идеи этого автора</string>
    <string name="badge_promoter">promoter</string>
    <string name="badge_hater">hater</string>
    <string name="reaction">Реакция</string>
    <string name="passwords_do_not_match">Пароли не совпадают</string>
    <string name="communication_error">Неизвестная ошибка связи</string>
    <string name="unknown_registration_error">Неизвестная ошибка регистрации</string>
    <string name="registration_success">Регистрация прошла успешно</string>
    <string name="progress_loading">Обработка…</string>
    <string name="auth_success">Аутентификация пройдена успешно</string>
    <string name="unknown_auth_error">Неизвестная ошибка аутентификации</string>
    <string name="googleplay_services_unavailable">Сервисы Google недоступны</string>
    <string name="feed_load_error">Ошибка загрузки фида</string>
    <string name="feed_update_error">Ошибка обновления фида</string>
    <string name="menu_clear_user_filter">Убрать фильтр по пользователю</string>
    <string name="reaction_post_error">Ошибка отправки реакции</string>
    <string name="reactions_load_error">Ошибка загрузки реакций</string>
    <string name="reactions_update_error">Ошибка обновления реакций</string>
    <string name="read_only">READ ONLY</string>
    <string name="profile_load_error">Ошибка загрузки профиля</string>
    <string name="profile_saved">Профиль сохранён</string>
    <string name="profile_save_error">Ошибка сохранения профиля</string>
    <string name="profile_avatar_upload_error">Ошибка загрузки изображения</string>
    <string name="remove_avatar">Убрать изображение</string>
    <string name="profile_save">Сохранить</string>
    <string name="post_add">Добавить идею</string>
    <string name="idea_text">Текст идеи</string>
    <string name="post_image_upload_error">Ошибка загрузки изображения идеи</string>
    <string name="post_added">Идея добавлена</string>
    <string name="post_add_error">Ошибка добавления идеи</string>
    <string name="idea_link">Ссылка (необязательно)</string>
    <string name="no_more_posts">Больше нет постов</string>
    <string name="vote_only_once">Голосовать можно только 1 раз</string>
</resources>
