<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin_mid"
    tools:context=".ui.PostActivity">

    <ImageView
        android:id="@+id/postImg"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/author_avatar"
        android:scaleType="centerCrop"
        android:src="@drawable/image_stub"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView

        android:id="@+id/removeImg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/remove_avatar"
        android:src="@drawable/remove_image"
        app:layout_constraintEnd_toEndOf="@id/postImg"
        app:layout_constraintTop_toTopOf="@id/postImg" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/wr_text"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_mid"
        app:layout_constraintBottom_toTopOf="@id/wr_link"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/postImg">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/postText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/idea_text"
            android:maxLength="100"
            android:inputType="textMultiLine" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/wr_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_mid"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/wr_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/postLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/idea_link"
            android:inputType="textUri" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>